icondir = join_paths(get_option('datadir'), 'icons/hicolor')
pkgicondir = join_paths(get_option('datadir'), 'proton/icons/hicolor')

install_subdir('hicolor/scalable', install_dir: pkgicondir)
install_subdir('hicolor/16x16', install_dir: pkgicondir)
install_subdir('hicolor/32x32', install_dir: pkgicondir)
install_subdir('hicolor/48x48', install_dir: pkgicondir)
install_subdir('hicolor/64x64', install_dir: pkgicondir)

install_data(['hicolor/scalable/apps/com.raggesilver.Proton.svg'],
             install_dir: join_paths(icondir, 'scalable/apps'))

